# game.libretro.uae

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/uae/: 0001-Default-CPU-compatibility-to-normal-on-x86_64.patch  0001-Disable-Wstringop-overflow-0-on-Windows.patch  0001-Fix-zlib-build-with-Xcode-16.3-Apple-toolchains.patch  0001-fix-Correct-fseek-error-check-in-my_fsize.patch  0001-libretro-Fix-stack-overflow-logging-more-than-512-ch.patch  0001-set-core-options-in-retro_set_environment.patch  0002-Fix-zlib-build-with-Xcode-16.3-Apple-toolchains.patch  0003-libretro-Fix-stack-overflow-logging-more-than-512-ch.patch  CMakeLists.txt  uae.txt
game.libretro.uae/: addon.xml.in
game.libretro.uae/resources/: buttonmap.xml  settings.xml  topology.xml
game.libretro.uae/resources/language/English/: strings.po
game.libretro.uae/resources/language/resource.language.af_za/: strings.po
game.libretro.uae/resources/language/resource.language.am_et/: strings.po
game.libretro.uae/resources/language/resource.language.ar_dz/: strings.po
game.libretro.uae/resources/language/resource.language.ar_sa/: strings.po
game.libretro.uae/resources/language/resource.language.ast_es/: strings.po
game.libretro.uae/resources/language/resource.language.az_az/: strings.po
game.libretro.uae/resources/language/resource.language.be_by/: strings.po
game.libretro.uae/resources/language/resource.language.bg_bg/: strings.po
(+83 files in other folders)
